--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,10 +18,9 @@ jobs:
           echo "versionName=$VNAME" >> $env:GITHUB_ENV
       - name: Install Dependencies
         run: |
-          choco install wget --no-progress
-          wget -q https://github.com/newpascal/newpascal/releases/download/np-v1.0.50/newpascal.zip
-          7z x -y "newpascal.zip" -o"C:\" > nul
-          wget "https://netcologne.dl.sourceforge.net/project/nsis/NSIS%203/3.05/nsis-3.05-setup.exe"
+          Invoke-WebRequest -Uri "https://github.com/newpascal/newpascal/releases/download/np-v1.0.50/newpascal.zip" -OutFile "newpascal.zip" -ProgressAction Continue
+          7z x -y "newpascal.zip" -o"C:\"
+          Invoke-WebRequest -Uri "https://sourceforge.net/projects/nsis/files/NSIS%203/3.05/nsis-3.05-setup.exe/download" -OutFile "nsis-3.05-setup.exe" -UserAgent "NativeHost" -ProgressAction Continue
           ./nsis-3.05-setup.exe /S
       - name: Build
         run: |
