--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
           c:\newpascal\lazarus\lazbuild src\ultrastardx-win.lpi --lazarusdir=c:\newpascal\lazarus
       - name: Add prebuilt DLLs
         run: |
-          python dldlls.py
+          wget https://github.com/UltraStar-Deluxe/mxe/releases/latest/download/usdx-dlls-i686-v2023.12.0.zip -O usdx-dlls-i686.zip
           7z x -y usdx-dlls-i686.zip -ogame "*.dll"
         env:
           ARTIFACT_ACCESS_TOKEN: ${{ secrets.MxeActionsReadAccessToken }}
